# kdownload

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  benchmark.sh
benchmark_results/: results.csv
packaging/debian/: build.sh
packaging/debian/DEBIAN/: control  postinst
packaging/windows/: kdownload.iss
src/: checksum.rs  cli.rs  main.rs  progress.rs  scheduler.rs  util.rs
src/download/: bandwidth.rs  manager.rs  mirror.rs  mod.rs  partmap.rs
