[package]
name = "kdownload"
version = "1.4.0"
edition = "2021"
authors = ["kdownload contributors"]
description = "Blazing-fast async segmented file downloader"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kdownload/kdownload"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time", "sync"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
nix = { version = "0.27", default-features = false, features = ["fs"] }
url = "2"
thiserror = "1"
futures-util = "0.3"
indicatif = "0.17"
colored = "2"

[dev-dependencies]
assert_cmd = "2"
